# urban_project

./: README.md  generator.py  middle_projects.md
_1_algorithm/: README.md  lru_cache.py
_2_decorator/: README.md  decorator.py
_3_annotations/: README.md
_4_async_project/: README.md  main.py  pyproject.toml
_4_async_project/api/: user.py
_4_async_project/api/dto/: user_dto.py
_4_async_project/core/: config.py  lifespan.py
_4_async_project/models/: user.py
_4_async_project/orm/: base_orm.py  user_orm.py
_4_async_project/services/: base_service.py  user_service.py
_4_async_project/utils/: lru_cache.py
_5_tests/tests/: conftest.py
_5_tests/tests/functional/src/: test_users.py
_6_graphql_task/: Dockerfile  README.md  main.py  pyproject.toml  tester.py
_6_graphql_task/isolated/: client.py  server.py
_6_graphql_task/templates/: WSAvcPlayer.js  helper.html  index.html  trash.html  ws-avc-implement.html  wsclient.js
_7_grpc/: README.md  docker-compose.yml
_7_grpc/auth_service/: .env.example  main.py  pyproject.toml
_7_grpc/auth_service/core/: config.py  rate_limiter.py  tracing.py
_7_grpc/tests/functional/src/: test_jaeger.py
_8_django/: pyproject.toml
_8_django/connector/: settings.py
async_project/core/: config.py
async_project/db/: sqlite.py
async_project/models/: pagination_params.py
async_project/orm/: base_orm.py  user_orm.py
async_project/services/: base_service.py  user_service.py
async_project/utils/: lru_cache.py
tests/tests/functional/fixtures/: api_fixture.py
