[tool.poetry]
name = "async-project"
version = "0.1.0"
description = ""
authors = ["4Surpr1se <aaa_nnn_96@mail.ru>"]
readme = "README.md"
packages = [{include = "async_project"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
